# actix_crud

./: Cargo.toml  Makefile
migrations/: 20231127163658_init.down.sql  20231127163658_init.up.sql
src/: main.rs
src/models/: game.rs
src/routes/: config.rs  game.rs  health_route.rs  mod.rs
